# bench

./: .gitignore  README.md  bench.sh
bun/: bench.js
cpp/: bench.cpp
csharp/: Program.cs
deno/: bench.ts
go/: bench.go
java/: Bench.java
node/: bench.js
php/: bench.php
python/: bench.py
rust/: Cargo.toml  bench.rs
